--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <a class="navbar-brand" href="/">
           <img
-            src="/img/codoacodo.png"
+            src="img/codoacodo.png"
             alt="Logo"
             width="60"
             height="40"
