--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a class="nav-link text-white" href="#convertirseOrador">Conviértete en orador</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Comprar tickets</a>
+              <a class="nav-link text-white" href="comprarTicket.html">Comprar tickets</a>
             </li>
           </ul>
         </div>
