--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
       <div class="container">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/conferencia-bs-as/">
           <img
             src="img/codoacodo.png"
             alt="Logo"
